Add JPMS to plugin module